manifests/consumer-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: consumer
  namespace: projectx
  labels:
    app: fun-facts
    role: consumer
spec:
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30001
    protocol: TCP
  selector:
    app: fun-facts
    role: consumer
