manifests/scenario_3.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: startup-mixed
  name: startup-mixed
spec:
  containers:
  - name: cont-main
    image: nginx
    volumeMounts:
    - name: data
      mountPath: /usr/share/nginx/html
    livenessProbe:
      httpGet:
        path: /healthy.html
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
    startupProbe:
      exec:
        command:
        - cat
        - /usr/share/nginx/html/healthy.html
      failureThreshold: 3
      periodSeconds: 5
      initialDelaySeconds: 25
  - name: cont-sidecar-postpone
    image: alpine
    command: ["/bin/sh", "-c"]
    args:
      - while true; do
          sleep 20; 
          echo 'WORKING' > /check/healthy.html; 
          sleep 60;
        done
    volumeMounts:
    - name: data
      mountPath: /check
  # - name: cont-sidecar-break
  #   image: alpine
  #   command: ["/bin/sh", "-c"]
  #   args:
  #     - while true; do
  #         sleep 60; 
  #         rm /check/healthy.html;
  #         sleep 20;
  #       done
  #   volumeMounts:
  #   - name: data
  #     mountPath: /check
  volumes:
  - name: data
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: startup-mixed
  labels:
    app: startup-mixed
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30001
    protocol: TCP
  selector:
    app: startup-mixed
