manifests/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-producer
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      role: producer
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: consumer
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-consumer
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      role: consumer
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: client
